--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "react-routes": "^0.2.6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
